syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "api/grpc/v1/phone_number;phone_number_grpc_service";

message UpsertPhoneNumberGrpcRequest {
  string tenant = 1;
  string phoneNumber = 2;
  string appSource = 3;
  string source = 4;
  string sourceOfTruth = 5;
  google.protobuf.Timestamp  createdAt = 6;
  google.protobuf.Timestamp  updatedAt = 7;
  string id = 8;
}

message CreatePhoneNumberGrpcRequest {
  string tenant = 1;
  string phoneNumber = 2;
  string appSource = 3;
  string source = 4;
  string sourceOfTruth = 5;
  google.protobuf.Timestamp  createdAt = 6;
}

message PhoneNumberIdGrpcResponse {
  string id = 1;
}

service phoneNumberGrpcService {
  rpc CreatePhoneNumber(CreatePhoneNumberGrpcRequest) returns (PhoneNumberIdGrpcResponse);
  rpc UpsertPhoneNumber(UpsertPhoneNumberGrpcRequest) returns (PhoneNumberIdGrpcResponse);
}
